# translator-app

./: Cargo.toml  README.md
Static/: index.html
Static/css/: stylesheet.css
migrations/2022-04-11-121046_phrases_table/: down.sql  up.sql
src/: main.rs  schema.rs
static/: index.html
static/css/: stylesheet.css
static/javascript/: translations.js
