[package]
name = "mega-project"
version = "0.1.0"
edition = "2021"
authors = ["John Cole <john@pun.nz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For serving our statics and API
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
diesel = { version = "1.4.4", features = ["mysql"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]